<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/main_hiragana_fifty_sound"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/main_hiragana_fifty_sound" />

            <Button
                android:id="@+id/main_hiragana_vocal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/main_hiragana_vocal" />

            <Button
                android:id="@+id/main_hiragana_twisted_sound"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/main_hiragana_twisted_sound" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:background="@color/color_d9d9d9" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/main_katakana_fifty_sound"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/main_katakana_fifty_sound" />

            <Button
                android:id="@+id/main_katakana_vocal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/main_katakana_vocal" />

            <Button
                android:id="@+id/main_katakana_twisted_sound"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/main_katakana_twisted_sound" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:background="@color/color_d9d9d9" />


        <Button
            android:id="@+id/main_hiragana_katakana_fifty_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_hiragana_katakana_fifty_sound" />

        <Button
            android:id="@+id/main_hiragana_katakana_vocal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_hiragana_katakana_vocal" />

        <Button
            android:id="@+id/main_hiragana_katakana_twisted_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_hiragana_katakana_twisted_sound" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:background="@color/color_d9d9d9" />

        <Button
            android:id="@+id/main_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_all" />
    </LinearLayout>
</ScrollView>

